Fix: Image alignment for Virtual Local Room

--- a/Css/for-fans/for-fans.css
+++ b/Css/for-fans/for-fans.css
@@ -517,6 +517,7 @@
     position: relative;
     z-index: 1;
     /* overflow: hidden; */
+    margin-top: 200px;
 }
 
 .virtual-local-room .blur-wrapper {
@@ -603,21 +604,35 @@
 }
 
 .virtual-local-room img {
-    position: absolute;
+    /* position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    z-index: -1;
+    z-index: -1; */
+    margin-top: -200px;
+    width: 200px;
+    position: relative;
+}
 
+.virtual-local-room img::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0.01deg, #0F0B1E 29.74%, rgba(15, 11, 30, 0) 99.99%);
+    filter: blur(50px);
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 
 .virtual-local-room .img1 {
-    top: -200px;
-    width: 70%;
+    /* top: -200px; */
+    width: 60%;
 }
 
 .virtual-local-room .img2 {
-    top: -180px;
-    width: 80%;
+    /* top: -180px; */
+    width: 70%;
 
 }
 
