--- a/Css/for-fans/mobile-480.css
+++ b/Css/for-fans/mobile-480.css
@@ -235,13 +235,10 @@
     z-index: -1;
 }
 
-/* .virtual-local-room img {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: -1;
+.virtual-local-room img {
+    margin-top: -100px;
 
-} */
+}
 
 .virtual-local-room .cards .card1 {
     padding-bottom: 100px;
